Indicator now has a source type: 'sensor' or 'feature' (could be extended to layers, or other datasources later on) Indicator now supports angular expressions, e.g you could describe values as i.value['result'] * 10 / -Math.PI RestAPI supports getting resource files Updated layer directory Layers have a list of tags and updated property (can be used for searching/filtering)
